--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-title: Hacker theme
-description: Hacker is a theme for GitHub Pages.
+title: Siaranite Solutions
+description: Excellence in computing
+author: Siaranite Solutions
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
